--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -5,373 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 1 - Hệ Thống Quản Lý Khóa Học</title>
     <link rel="stylesheet" href="css/styles.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 20px;
-        }
-
-        header {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        nav {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
-
-        nav ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        nav ul li {
-            display: inline;
-            margin: 0 15px;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-
-        nav a:hover {
-            color: #f4f4f4;
-            text-decoration: underline;
-        }
-
-        .container {
-            max-width: 600px;
-            margin: auto;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h2 {
-            color: #333;
-        }
-
-        .form-group {
-            margin-bottom: 15px;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
-
-        input[type="text"],
-        textarea {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-sizing: border-box;
-        }
-
-        button {
-            background-color: #5cb85c;
-            color: white;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        button:hover {
-            background-color: #4cae4c;
-        }
-
-        .button-group {
-            display: flex;
-            gap: 10px;
-            justify-content: center;
-        }
-
-        table {
-            width: 100%;
-            margin-top: 20px;
-            border-collapse: collapse;
-        }
-
-        th, td {
-            padding: 10px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-
-        th {
-            background-color: #f4f4f4;
-        }
-
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgb(0, 0, 0);
-            background-color: rgba(0, 0, 0, 0.4);
-            padding-top: 60px;
-        }
-
-        .modal-content {
-            background-color: #fefefe;
-            margin: 5% auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 80%;
-            max-width: 500px;
-            border-radius: 10px;
-        }
-
-        .close {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-        }
-
-        .close:hover,
-        .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
-
-        /* Styles cho dropdown giảng viên */
-        .dropdown {
-            position: relative;
-            display: inline-block;
-            width: 100%;
-        }
-
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f9f9f9;
-            min-width: 100%;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-            z-index: 1;
-        }
-
-        .dropdown-content div {
-            padding: 10px;
-            cursor: pointer;
-        }
-
-        .dropdown-content div:hover {
-            background-color: #f1f1f1;
-        }
-
-        .dropdown input {
-            width: 100%;
-        }
-
-        .dropdown.active .dropdown-content {
-            display: block;
-        }
-
-        /* Styles cho tab */
-        .tabs {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-
-        .tab {
-            margin: 0 10px;
-            padding: 10px 15px;
-            background-color: #f4f4f4;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .tab.active {
-            background-color: #5cb85c;
-            color: white;
-        }
-
-        /* Styles cho thông báo */
-        .alert {
-            background-color: #f9c2c2;
-            color: #d8000c;
-            padding: 10px;
-            margin: 20px 0;
-            border-radius: 5px;
-        }
-
-    </style>
-    <script>
-        let courseIdCounter = 1;
-        let currentCourseId = null;
-        let courses = [];
-        let instructors = ['Giảng viên A', 'Giảng viên B', 'Giảng viên C', 'Giảng viên D']; // Danh sách giảng viên
-
-        function updateTimestamps() {
-            const createdAt = new Date();
-            const options = { year: 'numeric', month: '2-digit', day: '2-digit', hour: '2-digit', minute: '2-digit', second: '2-digit' };
-            return createdAt.toLocaleDateString('vi-VN', options);
-        }
-
-        function updateTimestamp() {
-            const updatedAt = new Date();
-            const options = { year: 'numeric', month: '2-digit', day: '2-digit', hour: '2-digit', minute: '2-digit', second: '2-digit' };
-            return updatedAt.toLocaleDateString('vi-VN', options);
-        }
-
-        function openModal(course) {
-            document.getElementById('modalCourseId').innerText = course.id;
-            document.getElementById('modalCourseName').innerText = course.name;
-            document.getElementById('modalCourseDescription').innerText = course.description || 'Không có mô tả';
-            document.getElementById('modalCreatedBy').innerText = course.createdBy;
-            document.getElementById('modalCreatedAt').innerText = course.createdAt;
-            document.getElementById('modalUpdatedAt').innerText = course.updatedAt;
-
-            document.getElementById('courseDetailsModal').style.display = "block";
-        }
-
-        function closeModal() {
-            document.getElementById('courseDetailsModal').style.display = "none";
-        }
-
-        function editCourse(course) {
-            currentCourseId = course.id; // Lưu ID khóa học hiện tại
-
-            document.getElementById('courseName').value = course.name;
-            document.getElementById('courseDescription').value = course.description || '';
-            document.getElementById('createdBy').value = course.createdBy;
-            document.getElementById('createdAt').innerText = course.createdAt; // Ngày tạo không thay đổi
-            document.getElementById('updatedAt').innerText = updateTimestamp(); // Cập nhật ngày sửa
-
-            closeModal(); // Đóng modal khi chỉnh sửa
-        }
-
-        function addCourse(event) {
-            event.preventDefault(); // Ngăn không cho form gửi dữ liệu
-
-            const courseName = document.getElementById('courseName').value;
-            const courseDescription = document.getElementById('courseDescription').value;
-            const createdBy = document.getElementById('createdBy').value;
-
-            // Tạo đối tượng khóa học
-            const course = {
-                id: currentCourseId !== null ? currentCourseId : courseIdCounter++,
-                name: courseName,
-                description: courseDescription || '',
-                createdBy: createdBy,
-                createdAt: currentCourseId !== null ? document.getElementById('createdAt').innerText : updateTimestamps(),
-                updatedAt: updateTimestamp()
-            };
-
-            // Nếu đang cập nhật khóa học, thay đổi thông tin
-            if (currentCourseId !== null) {
-                updateCourse(course);
-                alert("Khóa học đã được cập nhật!");
-            } else {
-                courses.push(course);
-                displayCourseList();
-                alert("Khóa học đã được tạo mới!");
-            }
-
-            // Mở modal xem chi tiết khóa học sau khi cập nhật
-            openModal(course);
-            document.getElementById('courseForm').reset(); // Đặt lại form
-        }
-
-        function updateCourse(course) {
-            const index = courses.findIndex(c => c.id === course.id);
-            courses[index] = course; // Cập nhật thông tin khóa học
-            displayCourseList();
-        }
-
-        function displayCourseList() {
-            const courseListContainer = document.getElementById('courseList');
-            courseListContainer.innerHTML = '';
-
-            const table = document.createElement('table');
-            const thead = document.createElement('thead');
-            thead.innerHTML = `
-                <tr>
-                    <th>Mã Khóa Học</th>
-                    <th>Tên Khóa Học</th>
-                    <th>Giảng Viên</th>
-                    <th>Hành Động</th>
-                </tr>
-            `;
-            table.appendChild(thead);
-            const tbody = document.createElement('tbody');
-
-            courses.forEach(course => {
-                const row = document.createElement('tr');
-                row.innerHTML = `
-                    <td>${course.id}</td>
-                    <td>${course.name}</td>
-                    <td>${course.createdBy}</td>
-                    <td>
-                        <button onclick="openModal(course)">Xem Chi Tiết</button>
-                    </td>
-                `;
-                tbody.appendChild(row);
-            });
-
-            table.appendChild(tbody);
-            courseListContainer.appendChild(table);
-        }
-
-        function deleteCourse(courseId) {
-            if (confirm("Bạn có chắc chắn muốn xóa khóa học này?")) {
-                courses = courses.filter(course => course.id !== courseId);
-                displayCourseList();
-                alert("Khóa học đã được xóa!");
-                closeModal(); // Đóng modal sau khi xóa
-            }
-        }
-
-        function createNewCourse() {
-            currentCourseId = null; // Đặt lại ID khóa học
-            document.getElementById('courseForm').reset(); // Đặt lại form
-            document.getElementById('createdAt').innerText = ''; // Xóa ngày tạo
-            document.getElementById('updatedAt').innerText = ''; // Xóa ngày cập nhật
-        }
-
-        function autocompleteInstructors() {
-            const input = document.getElementById('createdBy');
-            const filter = input.value.toLowerCase();
-            const dropdown = document.querySelector('.dropdown-content');
-            dropdown.innerHTML = ''; // Xóa nội dung cũ
-
-            if (filter) {
-                instructors.forEach(instructor => {
-                    if (instructor.toLowerCase().includes(filter)) {
-                        const div = document.createElement('div');
-                        div.innerText = instructor;
-                        div.onclick = function () {
-                            input.value = instructor; // Gán giá trị cho ô nhập
-                            dropdown.innerHTML = ''; // Xóa dropdown sau khi chọn
-                        };
-                        dropdown.appendChild(div);
-                    }
-                });
-            }
-        }
-
-        // Bắt sự kiện gõ trên ô nhập giảng viên
-        document.getElementById('createdBy').addEventListener('input', autocompleteInstructors);
-    </script>
+    <script src="js/scripts.js"></script>
 </head>
 <body>
 
@@ -394,7 +28,6 @@
 </div>
 
 <div class="container" id="create">
-    <h2></h2>
     <form id="courseForm" onsubmit="addCourse(event)">
         <div class="form-group">
             <label for="courseName">Tên Khóa Học:</label>
@@ -431,7 +64,7 @@
 
 <div class="container" id="lab" style="display:none;">
     <h2>Thông Tin Lab</h2>
-  <p>Hệ thống quản lý khóa học được xây dựng với mục đích cung cấp một nền tảng dễ sử dụng cho giảng viên và sinh viên trong việc quản lý và theo dõi các khóa học. Với giao diện thân thiện, người dùng có thể dễ dàng tạo, sửa, và xóa các khóa học cũng như xem thông tin chi tiết của từng khóa học.</p>
+    <p>Hệ thống quản lý khóa học được xây dựng với mục đích cung cấp một nền tảng dễ sử dụng cho giảng viên và sinh viên trong việc quản lý và theo dõi các khóa học.</p>
 
     <h2>Tính Năng Nổi Bật</h2>
     <ul>
@@ -439,6 +72,8 @@
         <li>Hỗ trợ giảng viên trong việc theo dõi các thông tin khóa học.</li>
         <li>Cung cấp thông tin chi tiết và phân tích cho người dùng.</li>
     </ul>
+</div>
+
 <div id="courseDetailsModal" class="modal">
     <div class="modal-content">
         <span class="close" onclick="closeModal()">&times;</span>
@@ -455,23 +90,6 @@
         </div>
     </div>
 </div>
-
-<script>
-    function showTab(tabId) {
-        const tabs = document.querySelectorAll('.container');
-        tabs.forEach(tab => {
-            tab.style.display = tab.id === tabId ? 'block' : 'none';
-        });
-
-        const tabElements = document.querySelectorAll('.tab');
-        tabElements.forEach(tabElement => {
-            tabElement.classList.remove('active');
-            if (tabElement.textContent === tabId.replace(/([A-Z])/g, ' $1').trim()) {
-                tabElement.classList.add('active');
-            }
-        });
-    }
-</script>
 
 </body>
 </html>
