--- a/lab6/req8.html
+++ b/lab6/req8.html
@@ -24,28 +24,28 @@
         <div class="left-icons">
             <!-- List of icons (left side) -->
             <div class="icon aws">
-                <img src="img/I1.png" alt="AWS" width="30" height="30"> AWS
+                <img src="img/I12.jpg" alt="AWS" width="30" height="30"> AWS
             </div>
             <div class="icon go">
-                <img src="img/I1.png" alt="go"width="30" height="30">GO
+                <img src="img/I20.jpg" alt="go"width="30" height="30">GO
             </div>
             <div class="icon csharp">
-                <img src="img/I1.png" alt="C#" width="30" height="30"> C#
+                <img src="img/I6.png" alt="C#" width="30" height="30"> C#
             </div>
             <div class="icon js">
-                <img src="img/I1.png" alt="JS"width="30" height="30"> JS
+                <img src="img/I7.png" alt="JS"width="30" height="30"> JS
             </div>
             <div class="icon ruby">
-                <img src="img/I1.png" alt="Ruby"width="30" height="30"> Ruby
+                <img src="img/I8.png" alt="Ruby"width="30" height="30"> Ruby
             </div>
             <div class="icon redux">
-                <img src="img/I1.png" alt="Redux" width="30" height="30"> Redux
+                <img src="img/I9.png" alt="Redux" width="30" height="30"> Redux
             </div>
             <div class="icon android">
-                <img src="img/I1.png" alt="Android" width="30" height="30"> Android
+                <img src="img/I10.jpg" alt="Android" width="30" height="30"> Android
             </div>
             <div class="icon vue">
-                <img src="img/I1.png" alt="Vue JS" width="30" height="30"> Vue JS
+                <img src="img/I11.webp" alt="Vue JS" width="30" height="30"> Vue JS
             </div>
         </div>
         
@@ -66,28 +66,28 @@
         <div class="right-icons">
             <!-- List of icons (right side) -->
             <div class="icon aws">
-                <img src="img/I1.png" alt="AWS" width="30" height="30"> AWS
+                <img src="img/I12.jpg" alt="AWS" width="30" height="30"> AWS
             </div>
             <div class="icon">
-                <img src="img/I1.png" alt="Jupyter" width="30" height="30"> Jupyter
+                <img src="img/I13.png" alt="Jupyter" width="30" height="30"> Jupyter
             </div>
             <div class="icon">
-                <img src="img/I1.png" alt="GIT" width="30" height="30"> GIT
+                <img src="img/I14.png" alt="GIT" width="30" height="30"> GIT
             </div>
             <div class="icon">
-                <img src="img/I1.png" alt="Python" width="30" height="30"> Python
+                <img src="img/I15.png" alt="Python" width="30" height="30"> Python
             </div>
             <div class="icon">
-                <img src="img/I1.png" alt="PHP" width="30" height="30"> PHP
+                <img src="img/I16.png" alt="PHP" width="30" height="30"> PHP
             </div>
             <div class="icon">
-                <img src="img/I1.png" alt="CSS3" width="30" height="30"> CSS3
+                <img src="img/I17.jpg" alt="CSS3" width="30" height="30"> CSS3
             </div>
             <div class="icon">
-                <img src="img/I1.png" alt="Bash" width="30" height="30"> Bash
+                <img src="img/I18.jpg" alt="Bash" width="30" height="30"> Bash
             </div>
             <div class="icon">
-                <img src="img/I1.png" alt="jQuery" width="30" height="30"> jQuery
+                <img src="img/I19.png" alt="jQuery" width="30" height="30"> jQuery
             </div>
         </div>
     </section>
