--- a/lab4/index.html
+++ b/lab4/index.html
@@ -31,7 +31,6 @@
             font-size: 16px; /* Kích thước chữ */
             text-decoration: none; /* Không có gạch chân */
         }  
-
         /* Container for layout */
         .container {
             width: 100%;
@@ -437,7 +436,7 @@
     <div class="section-title">Section 10: Mule basics - Basic transformations <button class="button">▼;</button></div>
     <div class="content-item">0 / 5 | 1hr 2min</div>
 </div>
-\ <div class="section">
+<div class="section">
     <div class="section-title">Section 11: Mule basics - Basic transformations <button class="button">▼;</button></div>
     <div class="content-item">0 / 5 | 1hr 2min</div>
 </div>
