--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 
         #About {
-            background-image: url('IMG/about.png');
+            background-image: url('imgimg/about.png');
             background-size: cover;
             background-position: center;
             color: white;
