--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
             <button class="tablink" onclick="openTab(event, 'Lab4')">Lab4</button>
             <button class="tablink" onclick="openTab(event, 'Lab5')">Lab5</button>
             <button class="tablink" onclick="openTab(event, 'Lab6')">Lab6</button>
+             <button class="tablink" onclick="openTab(event, 'result')">Result</button>
         </div>
     </div>
     <div id="Home" class="tabcontent">
