--- a/index.html
+++ b/index.html
@@ -343,7 +343,19 @@
     <div id="Lab6" class="tabcontent">
         <iframe id="lab6-frame" src="" style="width: 100%; height: 80vh; border: none;"></iframe>
     </div>
+
+    <div id="result" class="tabcontent">
+      <div class="web-group-frame">
+        <h2>Web Nhóm</h2>
+        <p>Design and Implementation</p>
+      </div>
     
+      <div class="web-project-frame">
+        <h2>Web Project</h2>
+        <p>Khách hàng</p>
+      </div>
+    </div>
+
     <footer>
         <p>© 2024 Nguyen Van Thanh. All rights reserved.</p>
     </footer>
