--- a/index.html
+++ b/index.html
@@ -222,6 +222,27 @@
             transition: opacity 1s ease, transform 1s ease; /* Hiệu ứng chuyển động */
         }
 
+        .web-group-frame, .web-project-frame {
+          border: 2px solid #4CAF50; /* Viền khung cho cả hai khung */
+          padding: 20px;
+          border-radius: 10px;
+          margin-bottom: 20px; /* Khoảng cách giữa hai khung */
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+          background-color: #f9f9f9;
+        }
+        
+        .web-group-frame h2, .web-project-frame h2 {
+          margin-top: 0;
+          font-size: 24px;
+          font-weight: bold;
+        }
+        
+        .web-group-frame p, .web-project-frame p {
+          font-size: 18px;
+          color: #333;
+        }
+
+
     </style>
 </head>
 <body>
