--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         .welcome-text {
             font-size: 80px;
-            color: #f0f8ff; /* Màu đen */
+            color:#0056b3;
             text-shadow: none; /* Loại bỏ bóng chữ nếu không cần thiết */
             opacity: 0;
             transform: translateY(20px);
